<resources>
    <string name="app_name">EgyptTourGuid</string>
    <string name="Welcome">Welcome in Egypt Tour Guide App!</string>
    <string name="action_settings">Settings</string>
    <string name="TouristicalMonuments">TouristicalMonuments</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Shopping">Shopping</string>
    <string name="Information">Information</string>
    <string name="TouristicalMonumentsItem1Name">Egyptians Museum</string>
    <string name="TouristicalMonumentsItem1Description">Is a place that includes at least 120 thousand pieces of ancient Egyptian antiques, which is one of the most important attractions of Cairo, and consists of two floors are the ground and the first, and the ground floor contains a wide range of papyrus and coins used by the ancient Egyptians, The first floor contains antiques from the ancient Egyptian dynasties and contains many artifacts from the Valley of the Kings. It includes parts of the tomb of Tutankhamun, as well as the chamber of the Mamiyot, which contains 27 royal mummies from the Pharaonic era.</string>
    <string name="TouristicalMonumentsItem1Address">Cairo - Tahrir Square - Salim Hassan Street</string>
    <string name="TouristicalMonumentsItem2Name">Mosque of ibn tulun</string>
    <string name="TouristicalMonumentsItem2Description">It is one of the oldest mosques in Cairo. It was founded by Ahmed Ibn Tulun, the Abbasid ruler in Egypt, who ordered it between 867 and 879 AD. The mosque was built around a courtyard with one hall covered with four sides. The minaret contains a rear staircase. Part of a global film by James Bond is the spy who loved me inside the mosque.</string>
    <string name="TouristicalMonumentsItem2Address">Toulon, Sayeda Zeinab, Cairo Governorate</string>
    <string name="TouristicalMonumentsItem3Name">karnak temple</string>
    <string name="TouristicalMonumentsItem3Description">Is the largest and oldest religious sites and represents the joint achievement of many generations of Egyptian builders. It consists of 3 temples, the main temple, small temples and temples. The most famous place in Karnak is the Great Hall of the Pillars, 5000 square meters It has 134 columns arranged in 16 rows.</string>
    <string name="TouristicalMonumentsItem3Address">North of Luxor, located in southern Egypt.</string>
    <string name="TouristicalMonumentsItem4Name">valley of the kings</string>
    <string name="TouristicalMonumentsItem4Description">The tombs of kings and nobles were built in the new Kingdom and contain rooms and tombs ranging from small pits to complex tombs. The walls are decorated with scenes from Egyptian legends and show information about the funerary beliefs and rites of the period.</string>
    <string name="TouristicalMonumentsItem4Address">Luxor, New Valley</string>
    <string name="RestaurantItem1Name">Rotor at Grand Hyatt Hotel</string>
    <string name="RestaurantItem1Description">Is one of Cairos famous restaurants that embrace the sky with its high altitude to complement its 360 degrees in every 75 minutes with the clock, reflecting its lights on the Nile water to draw the magnificent painting with the three pyramids with unmatched magic. A unique experience filled with fun and adventure.</string>
    <string name="RestaurantItem1Address">Corniche El Nil, El Rawda Island, Inside Fonadq Grand, Garden City, Cairo</string>
    <string name="RestaurantItem2Name">New Nile Pharaoh</string>
    <string name="RestaurantItem2Description">The Pharaohs cruising restaurants are two master pieces on the River Nile – evocations of the beguiling world of Ancient Egypt. Step aboard one of our boats and treat yourself to a two-hour escape in Pharaonic splendor Inspired by the sensual lines of the ancient solar barques, the Nile Pharaoh pays tribute to Hathor</string>
    <string name="RestaurantItem2Address">138 Nile St., Giza - behind the Four Seasons Hotel</string>
    <string name="RestaurantItem3Name">Scarabee floating restaurant</string>
    <string name="RestaurantItem3Description">Lunch and Nile Dinner on board the Scarabia Cruise Enjoy a Nile Dinner on board the Scrabie, enjoy Nile cruises, enjoy the sunset, see the beautiful scenery, enjoy the cuisine and enjoy the art and folklore.</string>
    <string name="RestaurantItem3Address">Cornish El Nile - Garden City - Across Shepheared Hotel</string>
    <string name="ShoppingItem1Name">Khan Al-Khalily</string>
    <string name="ShoppingItem1Description">Khan el-Khalili, one of Cairo s old neighborhoods, has a great tourist attraction for visitors to Cairo and Egypt in general. It is characterized by the existence of bazaars, shops and restaurants popular, and is characterized by the large numbers of tourists and the habit of residents on them.</string>
    <string name="ShoppingItem1Address">Al-Gamaliya, Al-Gamaliyya Department, Cairo Governorate</string>
    <string name="ShoppingItem2Name">Downtown Mall</string>
    <string name="ShoppingItem2Description">Downtown Katameya is one of the centers of the fifth assembly, which is the most famous malls of New Cairo since it is located on the first 90th Street and one of the first malls opened. It has several buildings, shops and exhibitions on two floors, and contains many clothing shops and shoes such as Concrete, Dali Drees, Bays, restaurants and cafes</string>
    <string name="ShoppingItem2Address">Al - Qattamiya Fifth Compound New Cairo</string>
    <string name="ShoppingItem3Name">Sultan Barqouq</string>
    <string name="ShoppingItem3Description">He has antiques of all ages at reasonable prices, every piece in which you take a different time than the Fatimid Cairo, so that you can meet French and Japanese violins as well.</string>
    <string name="ShoppingItem3Address">121 El Moez Ledin Allah El Fatemy St., Azhar, El Gamaleya Division, Cairo Governorate</string>
    <string name="InformationItem1Name">Transportation</string>
    <string name="InformationItem1Description">Tourist services for tourist facilities, owners of tourist vehicles electronic services such as tourist vehicle registration, technical inspection of tourist vehicles, accommodation and transfer of property for tourist vehicles and other services And improve the performance of the Egyptian government represented by the Egyptian Ministry of Tourism</string>
    <string name="InformationItem1Address"> CAIRO, ABBASSEYA</string>
    <string name="InformationItem2Name">Hotel</string>
    <string name="InformationItem2Description">There are many luxury international hotels in Egypt which provide comfort, safety and luxury for tourists and others and provide them with all the means of living</string>
    <string name="InformationItem2Address">Main Center: Heliopolis8 El Obour Salah Salem Bldgs</string>
</resources>
